<resources>
    <string name="app_name">NUMAD25Fa_QianLi</string>
    <string name="hi">About Me</string>
    <string name="calc">Quic Calc</string>
    <string name="contacts">Contacts</string>
    <string name="contact_firstname">Firstname</string>
    <string name="contact_lastname">Lastname</string>
    <string name="contact_phone">Enter Phone</string>
    <string name="appwidget_text">Have a great day!</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="contact_description">Add contact</string>
    <string name="collector_header_name">Firstname Lastname</string>
    <string name="collector_header_phone">(+1) 000 000 0000</string>
    <string name="collector_header_Image_description">Image</string>

</resources>