<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/contact_firstname"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/contact_firstname"
        android:inputType="textPersonName"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/contact_lastname"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/contact_lastname"
        android:inputType="textPersonName"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/contact_phone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/contact_phone"
        android:inputType="phone"
        android:autofillHints="phone"/>
</LinearLayout>
