<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_contactCollector"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactsCollector">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/collector_header"
        android:layout_width="412dp"
        android:layout_height="198dp"
        android:background="@drawable/contact_collector_header_background"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="104dp"
            android:layout_height="86dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/collector_header_Image_description"
            android:src="@android:drawable/ic_menu_camera"
            android:visibility="visible"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/collector_header_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintEnd_toStartOf="@id/imageView"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageView" />

        <TextView
            android:id="@+id/title_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/collector_header_phone"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintEnd_toEndOf="@id/title_name"
            app:layout_constraintStart_toStartOf="@id/title_name"
            app:layout_constraintTop_toBottomOf="@id/title_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_contacts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/collector_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/activity_contact_list" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/contact_description"
        android:src="@drawable/baseline_add_24"
        app:backgroundTint="@color/floating_btn_1"
        app:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>